# infolang-agentcore

./: README.md  pyproject.toml
examples/: Dockerfile  agent.py  requirements.txt
examples/deploy/: README.md  main.tf
src/infolang_agentcore/: __init__.py  adapter.py  runtime.py
tests/: conftest.py  test_adapter.py  test_live.py  test_package.py  test_runtime.py
