[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-agentcore"
dynamic = ["version"]
description = "InfoLang durable memory for Amazon Bedrock AgentCore Runtime agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = [
  "infolang",
  "bedrock",
  "agentcore",
  "aws",
  "semantic-memory",
  "memory",
  "agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "bedrock-agentcore>=1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://infolang.ai/docs/integrations/agentcore"
Source = "https://github.com/InfoLang-Inc/infolang-agentcore"
Issues = "https://github.com/InfoLang-Inc/infolang-agentcore/issues"

[tool.hatch.version]
path = "src/infolang_agentcore/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_agentcore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: talks to real AWS/InfoLang; skipped unless --run-live is passed",
]
addopts = "--cov=infolang_agentcore --cov-report=term-missing --cov-branch --cov-fail-under=90"

[tool.coverage.run]
source = ["src/infolang_agentcore"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/infolang_agentcore"]
